cmake_minimum_required(VERSION 3.17)

project(shortpwd VERSION 1.0.1)

configure_file(src/${CMAKE_PROJECT_NAME}.h.in ${CMAKE_PROJECT_NAME}.h)
include_directories(${CMAKE_BINARY_DIR})
add_executable(${CMAKE_PROJECT_NAME} src/${CMAKE_PROJECT_NAME}.c)

install(TARGETS ${CMAKE_PROJECT_NAME} DESTINATION bin)
install(FILES src/${CMAKE_PROJECT_NAME}.1 DESTINATION share/man/man1)

if(WIN32 AND NOT UNIX)
  set(CPACK_GENERATOR "ZIP")
  set(CPACK_PACKAGE_FILE_NAME "${CMAKE_PROJECT_NAME}-1.0.1-windows-x86_64")
elseif(APPLE)
  set(CPACK_GENERATOR "TGZ")
  set(CPACK_PACKAGE_FILE_NAME "${CMAKE_PROJECT_NAME}-1.0.1-darwin-x86_64")
else()
  set(CPACK_GENERATOR "TXZ")
  set(CPACK_PACKAGE_FILE_NAME "${CMAKE_PROJECT_NAME}-1.0.1-linux-x86_64")
endif()
set(CPACK_INCLUDE_TOPLEVEL_DIRECTORY OFF)
set(CPACK_PACKAGE_CHECKSUM "SHA512")
set(CPACK_STRIP_FILES TRUE)
include(CPack)

add_test(NAME all
  COMMAND ${CMAKE_COMMAND} "-DSRC=${PROJECT_SOURCE_DIR}" "-DBIN=${PROJECT_BINARY_DIR}" "-DEXE=${CMAKE_PROJECT_NAME}" -P "${PROJECT_SOURCE_DIR}/test/test.cmake")
include(CTest)

set_property(TARGET ${CMAKE_PROJECT_NAME} PROPERTY ADDITIONAL_CLEAN_FILES
  ${CMAKE_PROJECT_NAME}.dSYM _CPack_Packages Testing actual.txt)
